--- a/style.css
+++ b/style.css
@@ -145,15 +145,62 @@ h1 {
 	text-shadow: none;
 }
 
-a {
-	color: #ffa500;
+.nav-box {
+	overflow-x: auto;
 }
 
-.light-mode a {
-	color: #93c400;
-}
-
-.nav {
+.nav-header {
+	width: fit-content;
+	height: auto;
+	background-color: rgb(222, 222, 222);
+	box-sizing: border-box;
 	display: flex;
-	flex-direction: column;
+	align-items: center;
+	border-radius: 5px;
 }
+
+.nav-ul {
+	padding: 0 1em;
+	display: flex;
+}
+
+.nav-ul li {
+	list-style: none;
+	text-align: center;
+}
+
+.nav-link {
+	display: block;
+	min-width: 7em;
+	text-decoration: none;
+	margin-right: 1em;
+	font-weight: bold;
+	color: #d35400;
+	padding: 1px 0.5em;
+	border: 2px solid #d35400;
+	border-radius: 5px;
+	background-color: #fff3cd;
+}
+
+.nav-link:hover {
+	transform: scale(1.05);
+	transition: all 0.3s ease;
+	color: #fff3cd;
+	background-color: #d35400;
+}
+
+/*
+.example{
+    display: block;
+    width: 300px;
+    padding: 15px 0;
+    margin: auto;
+    background: #569f3c;
+    color: #FFF;
+    text-decoration: none;
+    text-align: center;
+}
+.example:hover{
+    background: #225f0d;
+}
+*/
