--- a/style.css
+++ b/style.css
@@ -154,6 +154,8 @@ h3::before {
 }
 
 .nav-header {
+	margin-top: 1.5em;
+	margin-bottom: 5em;
 	width: fit-content;
 	height: auto;
 	background-color: rgb(222, 222, 222);
