--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 	/* --accent-tcolor: #000040; */
 	--accent-tcolor: #a20000;
 	/* --accent-bcolor: #f0f7fe;*/
-	--accent-bcolor:#fff4f4;
+	--accent-bcolor: #fff4f4;
 	--main-font: "YuMincho", "Hiragino Mincho ProN W3", "Hiragino Mincho ProN", serif;
 	--accent-font: "Hiragino Kaku Gothic ProN", "Yu Gothic", "Noto Sans JP", sans-serif;
 	/* --main-font: "Hiragino Kaku Gothic ProN", "Yu Gothic", "Noto Sans JP", sans-serif;
@@ -76,6 +76,48 @@ header {
 
 	h3 {
 		font-size: 18px;
+	}
+
+	.menu-icon {
+		width: 40px;
+		height: 30px;
+		position: absolute;
+		/*← fixedにして常に左上固定*/
+		top: 18px;
+		right: 20px;
+		cursor: pointer;
+		z-index: 3;
+		display: inline-block;
+	}
+
+	.theme-toggle {
+		font-family: var(--main-font);
+		display: block;
+		position: fixed;
+		top: 12px;
+		left: 20px;
+		background-color: var(--main-bcolor);
+		border: 2px solid var(--accent-bcolor);
+		height: 45px;
+		width: 45px;
+		padding: 0;
+		border-radius: 50%;
+		cursor: pointer;
+		font-weight: bold;
+		transition: all 0.3s ease;
+		/* z-index: 1000; */
+	}
+
+	header {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 70px;
+		background-color: rgba(142, 142, 142, 0.21);
+		box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+		z-index: 999;
+		flex: auto;
 	}
 }
 
