--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ button:hover {
 }
 
 /* ---表設定--- */
-table {
+.nikka-table {
 	border-collapse: collapse;
 	/* border: solid 2px var(--accent-tcolor); */
 	font-size: 18px;
@@ -201,45 +201,92 @@ table {
 	transition: all 0.3s ease;
 }
 
-.dark-mode table {
+.dark-mode .nikka-table {
 	border-color: #b1bae0;
 	background-color: #2a2a2a;
 }
 
-table th,
-table td {
+.nikka-table th,
+.nikka-table td {
 	/* border: dashed 1px var(--accent-tcolor); */
 	padding: 8px 12px;
 	transition: border-color 0.3s ease;
 }
 
-.dark-mode table th,
-.dark-mode table td {
+.dark-mode .nikka-table th,
+.dark-mode .nikka-table td {
 	border-color: #b1bae0;
 }
 
-table th {
+.nikka-table th {
 	background-color: var(--accent-bcolor);
 	color: var(--accent-tcolor);
 	font-weight: bold;
 }
 
-.dark-mode table th {
+.dark-mode .nikka-table th {
 	background-color: #333333;
 	color: #b1bae0;
 }
 
-table td {
+.nikka-table td {
 	color: var(--main-tcolor);
 }
 
-.dark-mode table td {
+.dark-mode .nikka-table td {
 	background-color: #333333;
 	color: #b1bae0;
 }
 
-table tr:nth-child(odd) {
+.nikka-table tr:nth-child(odd) {
 	background-color: #eee
+}
+
+.test-table {
+	border-collapse: collapse;
+	/* border: solid 2px var(--accent-tcolor); */
+	font-size: 18px;
+	background-color: var(--main-bcolor);
+	transition: all 0.3s ease;
+	text-align: center;
+}
+
+.dark-mode .test-table {
+	border-color: #b1bae0;
+	background-color: #2a2a2a;
+}
+
+.test-table th,
+.test-table td {
+	/* border: dashed 1px var(--accent-tcolor); */
+	padding: 8px 12px;
+	transition: border-color 0.3s ease;
+	border:1px rgb(170, 170, 170) solid;
+}
+
+.dark-mode .test-table th,
+.dark-mode .test-table td {
+	border-color: #b1bae0;
+}
+
+.test-table th {
+	background-color: var(--accent-bcolor);
+	color: var(--accent-tcolor);
+	font-weight: bold;
+}
+
+.dark-mode .test-table th {
+	background-color: #333333;
+	color: #b1bae0;
+}
+
+.test-table td {
+	color: var(--main-tcolor);
+}
+
+.dark-mode .test-table td {
+	background-color: #333333;
+	color: #b1bae0;
 }
 
 /* ---見出し設定--- */
@@ -494,5 +541,5 @@ a {
 }
 
 .dark-mode img {
-	filter: invert(90%);
+	filter: invert(30%);
 }
